wsdf/tests/should_fail/bitwise_or_more_than_two_display.stderr
error: expected a string literal
 --> tests/should_fail/bitwise_or_more_than_two_display.rs:9:22
  |
9 |     #[wsdf(display = "SEP_COLON" | "BASE_SHOW_ASCII_PRINTABLE" | "SEP_SPACE")]
  |                      ^^^^^^^^^^^
